# qualisys_drone_sdk

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature-request.md  refactor.md
.github/workflows/: issue_to_project.yml
api/: schema.py  service.py
config/: 250516v1.yaml
examples/flapper/: api_connect_test.py  cf_solo_data_collect_circle.py  cf_solo_data_collect_linear.py  cf_solo_data_xyz (old).py  cf_solo_data_xyz.py  cf_solo_data_xyz_old.py  cf_solo_worked.py  data_collection_test.py  plot_trajectory.py  solo_koopman_conformal_circle.py  test_data.json
examples/flapper/circular_traj/: circular_XYZ_20250423205056.json  circular_XYZ_20250423205633.json  circular_XYZ_20250423205828.json  circular_XYZ_20250423210321.json  circular_XYZ_20250423210652.json  circular_XYZ_20250423211202.json  circular_XYZ_20250423211613.json  circular_XYZ_20250423211852.json  circular_XYZ_20250423212101.json  circular_XYZ_20250423212346.json  circular_XYZ_20250521131555.json  circular_X_20250419180250.json  circular_X_20250419184938.json  circular_X_20250423200135.json  circular_X_20250423200342.json  circular_X_20250423200708.json  circular_X_20250423200955.json  circular_X_20250423201342.json  circular_X_20250423201701.json  circular_X_20250423201854.json  circular_X_20250423202418.json  circular_X_20250423202922.json  (+33 more)
koopman_cp/src/: analyze_angular_velocity.py  probabilistic_tracking_error.py  theoretical_bounds_validator.py  validate_bounds_example.py
qfly/: crazyflie.py  functions.py
