[project]
name = "qualisys-drone-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cflib>=0.1.28",
    "pynput>=1.8.1",
    "qtm>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["qfly"]
